@@ -1,3 +1,9 @@
+2008-02-18  Alexander Larsson  <alexl@redhat.com>
+
+        * glocalfile.c:
+        * glocalfileoutputstream.c:
+	Open files with O_BINARY on windows. (#517140)
+
 2008-02-14  Alexander Larsson  <alexl@redhat.com>
 
         * glocalfileoutputstream.c:
